--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,10 @@
-cat > .streamlit/config.toml << 'EOF'
-[server]
-port = 8080
-address = "0.0.0.0"
-headless = true
-enableCORS = false
-enableXsrfProtection = false
+from flask import Flask
 
-[browser]
-gatherUsageStats = false
-EOF
+app = Flask(__name__)
+
+@app.route('/health')
+def health():
+    return "Healthy", 200
+
+if __name__ == "__main__":
+    app.run(host='0.0.0.0', port=8080)
